[package]
name = "maze-solver"
version = "0.1.0"
authors = ["David Campion <David.Campion@walmartlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.60"
serde = {version = "1.0.123", features = ["derive"]}
num = "0.3.1"
